--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@studio-freight/react-lenis": "^0.0.46",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.2",
     "lucide-react": "^0.363.0",
     "mongoose": "^8.3.2",
     "next": "14.1.4",
