--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@studio-freight/react-lenis": "^0.0.46",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.2",
+    "iron-session": "^8.0.1",
     "lucide-react": "^0.363.0",
     "mongoose": "^8.3.2",
     "next": "14.1.4",
@@ -42,6 +44,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
