--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@opensea/next-themes": "^1.0.14",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -37,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "react-icons": "^5.1.0",
     "react-toastify": "^10.0.5",
     "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^2.2.2",
