--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "embla-carousel-react": "^8.0.2",
     "iron-session": "^8.0.1",
     "lucide-react": "^0.363.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.2",
     "next": "14.1.4",
     "react": "^18",
