--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@opensea/next-themes": "^1.0.14",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@studio-freight/react-lenis": "^0.0.46",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
     "iron-session": "^8.0.1",
     "lucide-react": "^0.363.0",
@@ -32,6 +36,8 @@
     "mongoose": "^8.3.2",
     "next": "14.1.4",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.1.0",
